RESOLVED FIXED141239
Fix a misplaced include in CaptionUserPreferencesMediaAF
https://bugs.webkit.org/show_bug.cgi?id=141239
Summary Fix a misplaced include in CaptionUserPreferencesMediaAF
Tim Horton
Reported 2015-02-04 00:11:51 PST
Fix a misplaced include in CaptionUserPreferencesMediaAF
Attachments
Patch (1.46 KB, patch)
2015-02-04 00:12 PST, Tim Horton
no flags
Tim Horton
Comment 1 2015-02-04 00:12:05 PST
WebKit Commit Bot
Comment 2 2015-02-04 12:41:07 PST
Comment on attachment 246024 [details] Patch Clearing flags on attachment: 246024 Committed r179624: <http://trac.webkit.org/changeset/179624>
WebKit Commit Bot
Comment 3 2015-02-04 12:41:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.