Fix a misplaced include in CaptionUserPreferencesMediaAF https://bugs.webkit.org/show_bug.cgi?id=141239

Reviewed by Jer Noble.

* page/CaptionUserPreferencesMediaAF.cpp:
CoreText is a system header, and there's already a good spot for it!


Canonical link: https://commits.webkit.org/159270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179624 268f45cc-cd09-0410-ab3c-d52691b4dbfc